--- a/Tank-Hunter/Tank-Hunter.vcxproj.filters
+++ b/Tank-Hunter/Tank-Hunter.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\MainMenu.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -91,22 +94,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\shader_5_sun.frag">
-      <Filter>Shader Files</Filter>
-    </None>
-    <None Include="shaders\shader_5_sun.vert">
-      <Filter>Shader Files</Filter>
-    </None>
     <None Include="shaders\shader_5_1.frag">
       <Filter>Shader Files</Filter>
     </None>
     <None Include="shaders\shader_5_1.vert">
-      <Filter>Shader Files</Filter>
-    </None>
-    <None Include="shaders\shader_5_1_tex.vert">
-      <Filter>Shader Files</Filter>
-    </None>
-    <None Include="shaders\shader_5_1_tex.frag">
       <Filter>Shader Files</Filter>
     </None>
   </ItemGroup>
