--- a/Tank-Hunter/Tank-Hunter.vcxproj
+++ b/Tank-Hunter/Tank-Hunter.vcxproj
@@ -39,8 +39,12 @@
     <ClInclude Include="src\Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\OBJ_color_FogShader.frag" />
+    <None Include="shaders\OBJ_color_FogShader.vert" />
     <None Include="shaders\OBJ_color_shader.frag" />
     <None Include="shaders\OBJ_color_shader.vert" />
+    <None Include="shaders\OBJ_texture_FogShader.frag" />
+    <None Include="shaders\OBJ_texture_FogShader.vert" />
     <None Include="shaders\OBJ_texture_shader.frag" />
     <None Include="shaders\OBJ_texture_shader.vert" />
     <None Include="shaders\Skybox_shader.frag" />
